Widgets / Avoid extra space in latests mode before title.

--- a/web-client/src/main/resources/apps/css/gndefault.css
+++ b/web-client/src/main/resources/apps/css/gndefault.css
@@ -116,7 +116,7 @@ x-layout-cmini-east {
   width: 80%;
   height: 250px;
 }
-.latest * input[type='checkbox'] {
+.latest * span.checkbox {
   display: none;
 }
 
